go-router/main/default/objects/Go_Router__mdt/Go_Router__mdt.object-meta.xml
<CustomObject>
    <description>Definitions of all routes exposed to the /apex/go endpoint.</description>
    <label>Go Router</label>
    <pluralLabel>Go Routers</pluralLabel>
</CustomObject>