go-router/main/default/objects/Go_Router__mdt/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <description>Apex: Specifies the Apex class to invoke for routing. The class must implement GoRouter, and its route(String param) method will be invoked on routing.</description>
    <inlineHelpText>Apex: Specifies the Apex class to invoke for routing. The class must implement GoRouter, and its route(String param) method will be invoked on routing.</inlineHelpText>
    <label>Apex Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>