go-router/main/default/objects/Go_Router__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <description>DeveloperName of a CustomPermission. If specified, the user must have this custom permission to view/use this router.</description>
    <inlineHelpText>DeveloperName of a CustomPermission. If specified, the user must have this custom permission to view/use this router.</inlineHelpText>
    <label>Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>