go-router/main/default/objects/Go_Router__mdt/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <description>The SObject Type being searched for.</description>
    <inlineHelpText>The SObject Type being searched for.</inlineHelpText>
    <label>Entity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>