go-router/main/default/objects/Go_Router__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Used for documentation in the help page. Routes are grouped under a common table based on their group.</description>
    <inlineHelpText>Used for documentation in the help page. Routes are grouped under a common table based on their group.</inlineHelpText>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>