go-router/main/default/objects/Go_Router__mdt/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <description>Used for documentation in the help page. Describe the expected input parameter to send to the Router.</description>
    <inlineHelpText>Used for documentation in the help page. Describe the expected input parameter to send to the Router.</inlineHelpText>
    <label>Input</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>