go-router/main/default/objects/Go_Router__mdt/fields/Is_Default_Router__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Router__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if this router should be utilized if no explicit route is provided. Only one router should have a value of true.</description>
    <inlineHelpText>Specifies if this router should be utilized if no explicit route is provided. Only one router should have a value of true.</inlineHelpText>
    <label>Is Default Router?</label>
    <type>Checkbox</type>
</CustomField>