go-router/main/default/objects/Go_Router__mdt/fields/Is_Setup_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Setup_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the record is a type found within the Setup menu. Used for redirecting to the proper page.</description>
    <inlineHelpText>Specifies if the record is a type found within the Setup menu. Used for redirecting to the proper page.</inlineHelpText>
    <label>Is Setup Record?</label>
    <type>Checkbox</type>
</CustomField>