go-router/main/default/objects/Go_Router__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>The route exposed for this GoRouter (i.e. /apex/go/key =&gt; activates this router).</description>
    <inlineHelpText>The route exposed for this GoRouter (i.e. /apex/go/key =&gt; activates this router).</inlineHelpText>
    <label>Key</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>