go-router/main/default/objects/Go_Router__mdt/fields/Like_Query__c.field-meta.xml
<CustomField>
    <fullName>Like_Query__c</fullName>
    <description>
        The fallback query used to lookup the record with a LIKE wildcard. Available binding variables:
        - :likeParam (%param%)
        - :startsQuery (param%)
        - :endsQuery (%param)
    </description>
    <inlineHelpText>
        The fallback query used to lookup the record with a LIKE wildcard. Available binding variables:
        - :likeParam (%param%)
        - :startsQuery (param%)
        - :endsQuery (%param)
    </inlineHelpText>
    <label>Like Query</label>
    <type>TextArea</type>
</CustomField>