go-router/main/default/objects/Go_Router__mdt/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>
        The WHERE clause of a SOQL query used to find the record:
        - Use :param to pass in the String input
        - Use :paramAsNumber to pass in the input cast as a Double
    </description>
    <inlineHelpText>
        The WHERE clause of a SOQL query used to find the record:
        - Use :param to pass in the String input
        - Use :paramAsNumber to pass in the input cast as a Double
    </inlineHelpText>
    <label>Query</label>
    <type>TextArea</type>
</CustomField>