go-router/main/default/objects/Go_Router__mdt/fields/Record_Page__c.field-meta.xml
<CustomField>
    <fullName>Record_Page__c</fullName>
    <description>Overwrites the default record page to route the located record. Use &quot;{0}&quot; in the specified URL to inject the Id of the record into the URL. The default record page if left blank is: /{0}</description>
    <inlineHelpText>Overwrites the default record page to route the located record. Use &quot;{0}&quot; in the specified URL to inject the Id of the record into the URL. The default record page if left blank is: /{0}</inlineHelpText>
    <label>Record Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>