go-router/main/default/objects/Go_Router__mdt/fields/Redirect_Path__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Path__c</fullName>
    <description>The URL path the user will be redirected to.</description>
    <inlineHelpText>The URL path the user will be redirected to.</inlineHelpText>
    <label>Redirect Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>