go-router/main/default/objects/Go_Router__mdt/fields/Redirect_Path_With_Param__c.field-meta.xml
<CustomField>
    <fullName>Redirect_Path_With_Param__c</fullName>
    <description>Specifies a different redirect path if a non-empty parameter is passed to the router. Use {0} in the route to inject the parameter.</description>
    <inlineHelpText>Specifies a different redirect path if a non-empty parameter is passed to the router. Use {0} in the route to inject the parameter.</inlineHelpText>
    <label>Redirect Path With Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>