go-router/main/default/objects/Go_Router__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>
        The type of router:
        - Redirect: Redirects to an internal Salesforce page
        - Record: Searches for a particular Salesforce record using a passed in parameter and query
        - Apex: Utilizes a custom Apex class to perform routing based on a passed in parameter
    </description>
    <inlineHelpText>
        The type of router:
        - Redirect: Redirects to an internal Salesforce page
        - Record: Searches for a particular Salesforce record using a passed in parameter and query
        - Apex: Utilizes a custom Apex class to perform routing based on a passed in parameter
    </inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redirect</fullName>
                <default>true</default>
                <label>Redirect</label>
            </value>
            <value>
                <fullName>Record</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>