go-router/main/default/objects/Go_Router__mdt/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <description>Used for documentation in the help page. Provide a brief explanation of how to use this router</description>
    <inlineHelpText>Used for documentation in the help page. Provide a brief explanation of how to use this router</inlineHelpText>
    <label>Usage</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>