go-router/main/default/objects/Go_Router__mdt/validationRules/Apex_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Apex_Required_Fields</fullName>
    <active>true</active>
    <description>Enforce fields for Apex Type Routers</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &#39;Apex&#39;),
  ISBLANK(Apex_Class__c)
)</errorConditionFormula>
    <errorMessage>Apex Routers must supply the Apex Class field.</errorMessage>
</ValidationRule>