go-router/main/default/objects/Go_Router__mdt/validationRules/Record_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Required_Fields</fullName>
    <active>true</active>
    <description>Enforce fields for Record Type Routers</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &#39;Record&#39;),
  OR(
    ISBLANK(Entity__c),
    AND(
      ISBLANK(Query__c),
      ISBLANK(Like_Query__c)
    )
  )
)</errorConditionFormula>
    <errorMessage>Record Routers must supply the Entity field and at least one of &quot;Query&quot; or &quot;Like Query&quot;</errorMessage>
</ValidationRule>