go-router/main/default/objects/Go_Router__mdt/validationRules/Redirect_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Redirect_Required_Fields</fullName>
    <active>true</active>
    <description>Enforce fields for Redirect Type Routers</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Type__c, &#39;Redirect&#39;),
  ISBLANK(Redirect_Path__c)
)</errorConditionFormula>
    <errorMessage>Redirect Routers must supply a redirect path.</errorMessage>
</ValidationRule>