go-router/main/default/objects/Go_Router__mdt/listViews/All_Routers.listView-meta.xml
<ListView>
    <fullName>All_Routers</fullName>
    <columns>MasterLabel</columns>
    <columns>Key__c</columns>
    <columns>Input__c</columns>
    <columns>Usage__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Default_Router__c</columns>
    <columns>Group__c</columns>
    <columns>Custom_Permission__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Routers</label>
    <language>en_US</language>
</ListView>