go-router/main/default/objects/Go_Router__mdt/listViews/Apex_Routers.listView-meta.xml
<ListView>
    <fullName>Apex_Routers</fullName>
    <columns>MasterLabel</columns>
    <columns>Key__c</columns>
    <columns>Input__c</columns>
    <columns>Usage__c</columns>
    <columns>Apex_Class__c</columns>
    <columns>Group__c</columns>
    <columns>Custom_Permission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Apex</value>
    </filters>
    <label>Apex Routers</label>
</ListView>