go-router/main/default/objects/Go_Router__mdt/listViews/Record_Routers.listView-meta.xml
<ListView>
    <fullName>Record_Routers</fullName>
    <columns>MasterLabel</columns>
    <columns>Key__c</columns>
    <columns>Entity__c</columns>
    <columns>Input__c</columns>
    <columns>Query__c</columns>
    <columns>Is_Setup_Record__c</columns>
    <columns>Custom_Permission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Record</value>
    </filters>
    <label>Record Routers</label>
    <language>en_US</language>
</ListView>