go-router/main/default/objects/Go_Router__mdt/listViews/Redirect_Routers.listView-meta.xml
<ListView>
    <fullName>Redirect_Routers</fullName>
    <columns>MasterLabel</columns>
    <columns>Key__c</columns>
    <columns>Input__c</columns>
    <columns>Redirect_Path__c</columns>
    <columns>Redirect_Path_With_Param__c</columns>
    <columns>Group__c</columns>
    <columns>Custom_Permission__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Redirect</value>
    </filters>
    <label>Redirect Routers</label>
    <language>en_US</language>
</ListView>